crates/uitest/fixtures/ty_check/where_const_predicate_decl_false.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/where_const_predicate_decl_false.fe
---
error[3-0025]: division by zero in const context
   ┌─ where_const_predicate_decl_false.fe:16:32
   │
16 │ fn faulty_gate() -> u256 where 1 / 0 == 1 {
   │                                ^^^^^ cannot divide by zero

error[8-0085]: const predicate is not satisfied
  ┌─ where_const_predicate_decl_false.fe:6:31
  │
6 │ fn never_runs() -> u256 where false {
  │                               ^^^^^ const predicate evaluated to `false` here
  │
  = const predicates must be proven by an assumption or by CTFE evaluating to `true`

error[8-0085]: const predicate is not satisfied
   ┌─ where_const_predicate_decl_false.fe:11:35
   │
11 │ fn never_runs_cmp() -> u256 where 1 == 2 {
   │                                   ^^^^^^ const predicate evaluated to `false` here
   │
   = const predicates must be proven by an assumption or by CTFE evaluating to `true`
